kube_prod_config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmcloud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: farmcloud
  template:
    metadata:
      labels:
        app: farmcloud
    spec:
      containers:
      - name: farmcloud
        image: 
        ports:
        - containerPort: 8000
