kube_prod_config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: farmcloud-service
spec:
  selector:
    app: farmcloud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer  # Change to ClusterIP or NodePort as per your requirements
